exports[`Sync Basic Assertion Error Snapshots > \"{Record<any, unknown>} 'to be empty'\" [record_any-unknown-to-be-empty-2s2p] > should throw a consistent AssertionError [record_any-unknown-to-be-empty-2s2p] <snapshot> 1`] = `
{
  "name": "UnknownAssertionError",
  "args": [
    {
      "foo": "bar"
    },
    "to be an empty object"
  ],
  "code": "ERR_BUPKIS_UNKNOWN_ASSERTION",
  "stack": "UnknownAssertionError: Invalid arguments. No assertion matched: [ { foo: 'bar' }, 'to be an empty object' ]\\n    at throwInvalidParametersError (./src/expect.ts:574:9)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{arraylike} 'to be empty'\" [arraylike-to-be-empty-2s2p] > should throw a consistent AssertionError [arraylike-to-be-empty-2s2p] <snapshot> 1`] = `
{
  "name": "UnknownAssertionError",
  "args": [
    [
      1,
      2,
      3
    ],
    "to be an empty array"
  ],
  "code": "ERR_BUPKIS_UNKNOWN_ASSERTION",
  "stack": "UnknownAssertionError: Invalid arguments. No assertion matched: [ [ 1, 2, 3 ], 'to be an empty array' ]\\n    at throwInvalidParametersError (./src/expect.ts:574:9)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{string} 'to be empty'\" [string-to-be-empty-2s2p] > should throw a consistent AssertionError [string-to-be-empty-2s2p] <snapshot> 1`] = `
{
  "name": "UnknownAssertionError",
  "args": [
    "hello",
    "to be an empty string"
  ],
  "code": "ERR_BUPKIS_UNKNOWN_ASSERTION",
  "stack": "UnknownAssertionError: Invalid arguments. No assertion matched: [ 'hello', 'to be an empty string' ]\\n    at throwInvalidParametersError (./src/expect.ts:574:9)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{string} 'to be non-empty'\" [string-to-be-non_empty-2s2p] > should throw a consistent AssertionError [string-to-be-non_empty-2s2p] <snapshot> 1`] = `
{
  "name": "UnknownAssertionError",
  "args": [
    "",
    "to be a non empty string"
  ],
  "code": "ERR_BUPKIS_UNKNOWN_ASSERTION",
  "stack": "UnknownAssertionError: Invalid arguments. No assertion matched: [ '', 'to be a non empty string' ]\\n    at throwInvalidParametersError (./src/expect.ts:574:9)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be -Infinity'\" [unknown-to-be-_infinity-2s1p] > should throw a consistent AssertionError [unknown-to-be-_infinity-2s1p] <snapshot> 1`] = `
{
  "name": "UnknownAssertionError",
  "args": [
    null,
    "to be negative infinity"
  ],
  "code": "ERR_BUPKIS_UNKNOWN_ASSERTION",
  "stack": "UnknownAssertionError: Invalid arguments. No assertion matched: [ Infinity, 'to be negative infinity' ]\\n    at throwInvalidParametersError (./src/expect.ts:574:9)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be Infinity'\" [unknown-to-be-infinity-2s1p] > should throw a consistent AssertionError [unknown-to-be-infinity-2s1p] <snapshot> 1`] = `
{
  "name": "UnknownAssertionError",
  "args": [
    null,
    "to be positive infinity"
  ],
  "code": "ERR_BUPKIS_UNKNOWN_ASSERTION",
  "stack": "UnknownAssertionError: Invalid arguments. No assertion matched: [ -Infinity, 'to be positive infinity' ]\\n    at throwInvalidParametersError (./src/expect.ts:574:9)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be NaN'\" [unknown-to-be-nan-2s1p] > should throw a consistent AssertionError [unknown-to-be-nan-2s1p] <snapshot> 1`] = `
{
  "actual": 42,
  "expected": "<nan>",
  "message": "Assertion \\"{unknown} 'to be NaN'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mstring\\u001b[39m but received \\u001b[31mnumber\\u001b[39m.",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be NaN'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mstring\\u001b[39m but received \\u001b[31mnumber\\u001b[39m.\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:116:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a RegExp' / 'to be a regex' / 'to be a regexp'\" [unknown-to-be-a-regexp-to-be-a-regex-to-be-a-regexp-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-regexp-to-be-a-regex-to-be-a-regexp-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a RegExp' / 'to be a regex' / 'to be a regexp'\\" failed:\\nInput not instance of RegExp",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a RegExp' / 'to be a regex' / 'to be a regexp'\\" failed:\\nInput not instance of RegExp\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:194:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a Set'\" [unknown-to-be-a-set-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-set-2s1p] <snapshot> 1`] = `
{
  "actual": "hello",
  "expected": "<set>",
  "message": "Assertion \\"{unknown} 'to be a Set'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- <set>\\u001b[39m\\n\\u001b[31m+ hello\\u001b[39m",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a Set'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- <set>\\u001b[39m\\n\\u001b[31m+ hello\\u001b[39m\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:200:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a WeakMap'\" [unknown-to-be-a-weakmap-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-weakmap-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a WeakMap'\\" failed:\\nInput not instance of WeakMap",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a WeakMap'\\" failed:\\nInput not instance of WeakMap\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:236:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a WeakSet'\" [unknown-to-be-a-weakset-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-weakset-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a WeakSet'\\" failed:\\nInput not instance of WeakSet",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a WeakSet'\\" failed:\\nInput not instance of WeakSet\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:242:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a bigint' / 'to be a BigInt'\" [unknown-to-be-a-bigint-to-be-a-bigint-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-bigint-to-be-a-bigint-2s1p] <snapshot> 1`] = `
{
  "actual": 42,
  "expected": "<bigint>",
  "message": "Assertion \\"{unknown} 'to be a bigint' / 'to be a BigInt'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mstring\\u001b[39m but received \\u001b[31mnumber\\u001b[39m.",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a bigint' / 'to be a BigInt'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mstring\\u001b[39m but received \\u001b[31mnumber\\u001b[39m.\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:32:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a boolean' / 'to be boolean' / 'to be a bool'\" [unknown-to-be-a-boolean-to-be-boolean-to-be-a-bool-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-boolean-to-be-boolean-to-be-a-bool-2s1p] <snapshot> 1`] = `
{
  "actual": "hello",
  "expected": true,
  "message": "Assertion \\"{unknown} 'to be a boolean' / 'to be boolean' / 'to be a bool'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mboolean\\u001b[39m but received \\u001b[31mstring\\u001b[39m.",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a boolean' / 'to be boolean' / 'to be a bool'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mboolean\\u001b[39m but received \\u001b[31mstring\\u001b[39m.\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:38:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a class' / 'to be a constructor' / 'to be constructible'\" [unknown-to-be-a-class-to-be-a-constructor-to-be-constructible-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-class-to-be-a-constructor-to-be-constructible-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a class' / 'to be a constructor' / 'to be constructible'\\" failed:\\nInvalid input",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a class' / 'to be a constructor' / 'to be constructible'\\" failed:\\nInvalid input\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:44:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a date' / 'to be a Date'\" [unknown-to-be-a-date-to-be-a-date-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-date-to-be-a-date-2s1p] <snapshot> 1`] = `
{
  "actual": "hello",
  "expected": "<date>",
  "message": "Assertion \\"{unknown} 'to be a date' / 'to be a Date'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- <date>\\u001b[39m\\n\\u001b[31m+ hello\\u001b[39m",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a date' / 'to be a Date'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- <date>\\u001b[39m\\n\\u001b[31m+ hello\\u001b[39m\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:50:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a function'\" [unknown-to-be-a-function-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-function-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a function'\\" failed:\\nInvalid input",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a function'\\" failed:\\nInvalid input\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:98:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a negative integer' / 'to be a negative int'\" [unknown-to-be-a-negative-integer-to-be-a-negative-int-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-negative-integer-to-be-a-negative-int-2s1p] <snapshot> 1`] = `
{
  "actual": 5,
  "expected": 0,
  "message": "Assertion \\"{unknown} 'to be a negative integer' / 'to be a negative int'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- 0\\u001b[39m\\n\\u001b[31m+ 5\\u001b[39m",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a negative integer' / 'to be a negative int'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- 0\\u001b[39m\\n\\u001b[31m+ 5\\u001b[39m\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:134:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a number' / 'to be finite'\" [unknown-to-be-a-number-to-be-finite-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-number-to-be-finite-2s1p] <snapshot> 1`] = `
{
  "actual": "hello",
  "expected": 0,
  "message": "Assertion \\"{unknown} 'to be a number' / 'to be finite'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mnumber\\u001b[39m but received \\u001b[31mstring\\u001b[39m.",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a number' / 'to be finite'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mnumber\\u001b[39m but received \\u001b[31mstring\\u001b[39m.\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:152:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a positive integer' / 'to be a positive int'\" [unknown-to-be-a-positive-integer-to-be-a-positive-int-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-positive-integer-to-be-a-positive-int-2s1p] <snapshot> 1`] = `
{
  "actual": -5,
  "expected": 0,
  "message": "Assertion \\"{unknown} 'to be a positive integer' / 'to be a positive int'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- 0\\u001b[39m\\n\\u001b[31m+ -5\\u001b[39m",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a positive integer' / 'to be a positive int'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- 0\\u001b[39m\\n\\u001b[31m+ -5\\u001b[39m\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:176:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a primitive'\" [unknown-to-be-a-primitive-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-primitive-2s1p] <snapshot> 1`] = `
{
  "actual": {},
  "expected": {},
  "message": "Assertion \\"{unknown} 'to be a primitive'\\" failed:\\n\\u001b[2mCompared values have no visual difference.\\u001b[22m",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a primitive'\\" failed:\\n\\u001b[2mCompared values have no visual difference.\\u001b[22m\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:182:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a record' / 'to be a plain object'\" [unknown-to-be-a-record-to-be-a-plain-object-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-record-to-be-a-plain-object-2s1p] <snapshot> 1`] = `
{
  "actual": [],
  "expected": "<record>",
  "message": "Assertion \\"{unknown} 'to be a record' / 'to be a plain object'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mstring\\u001b[39m but received \\u001b[31marray\\u001b[39m.",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a record' / 'to be a plain object'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mstring\\u001b[39m but received \\u001b[31marray\\u001b[39m.\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:188:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a string'\" [unknown-to-be-a-string-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-string-2s1p] <snapshot> 1`] = `
{
  "actual": 42,
  "expected": "42",
  "message": "Assertion \\"{unknown} 'to be a string'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mstring\\u001b[39m but received \\u001b[31mnumber\\u001b[39m.",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a string'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mstring\\u001b[39m but received \\u001b[31mnumber\\u001b[39m.\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:206:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a symbol' / 'to be a Symbol'\" [unknown-to-be-a-symbol-to-be-a-symbol-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-symbol-to-be-a-symbol-2s1p] <snapshot> 1`] = `
{
  "actual": "hello",
  "expected": "<symbol>",
  "message": "Assertion \\"{unknown} 'to be a symbol' / 'to be a Symbol'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- <symbol>\\u001b[39m\\n\\u001b[31m+ hello\\u001b[39m",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be a symbol' / 'to be a Symbol'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- <symbol>\\u001b[39m\\n\\u001b[31m+ hello\\u001b[39m\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:212:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be an Error' / 'to be a Error'\" [unknown-to-be-an-error-to-be-a-error-2s1p] > should throw a consistent AssertionError [unknown-to-be-an-error-to-be-a-error-2s1p] <snapshot> 1`] = `
{
  "name": "UnknownAssertionError",
  "args": [
    "hello",
    "to be an error"
  ],
  "code": "ERR_BUPKIS_UNKNOWN_ASSERTION",
  "stack": "UnknownAssertionError: Invalid arguments. No assertion matched: [ 'hello', 'to be an error' ]\\n    at throwInvalidParametersError (./src/expect.ts:574:9)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be an array' / 'to be array'\" [unknown-to-be-an-array-to-be-array-2s1p] > should throw a consistent AssertionError [unknown-to-be-an-array-to-be-array-2s1p] <snapshot> 1`] = `
{
  "actual": 42,
  "expected": [],
  "message": "Assertion \\"{unknown} 'to be an array' / 'to be array'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32marray\\u001b[39m but received \\u001b[31mnumber\\u001b[39m.",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be an array' / 'to be array'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32marray\\u001b[39m but received \\u001b[31mnumber\\u001b[39m.\\n    at expect.foo (./test/error/sync-basic-error.test.ts:20:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be an async function'\" [unknown-to-be-an-async-function-2s1p] > should throw a consistent AssertionError [unknown-to-be-an-async-function-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be an async function'\\" failed:\\nInvalid input",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be an async function'\\" failed:\\nInvalid input\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:26:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be an integer' / 'to be a safe integer' / 'to be an int' / 'to be a safe int'\" [unknown-to-be-an-integer-to-be-a-safe-integer-to-be-an-int-to-be-a-safe-int-2s1p] > should throw a consistent AssertionError [unknown-to-be-an-integer-to-be-a-safe-integer-to-be-an-int-to-be-a-safe-int-2s1p] <snapshot> 1`] = `
{
  "actual": 3.14,
  "expected": "<int>",
  "message": "Assertion \\"{unknown} 'to be an integer' / 'to be a safe integer' / 'to be an int' / 'to be a safe int'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mstring\\u001b[39m but received \\u001b[31mnumber\\u001b[39m.",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be an integer' / 'to be a safe integer' / 'to be an int' / 'to be a safe int'\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mstring\\u001b[39m but received \\u001b[31mnumber\\u001b[39m.\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:110:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be an object'\" [unknown-to-be-an-object-2s1p] > should throw a consistent AssertionError [unknown-to-be-an-object-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be an object'\\" failed:\\nInvalid input",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be an object'\\" failed:\\nInvalid input\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:158:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be defined'\" [unknown-to-be-defined-2s1p] > should throw a consistent AssertionError [unknown-to-be-defined-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be defined'\\" failed:\\nInvalid input: expected nonoptional, received undefined",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be defined'\\" failed:\\nInvalid input: expected nonoptional, received undefined\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:56:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be false'\" [unknown-to-be-false-2s1p] > should throw a consistent AssertionError [unknown-to-be-false-2s1p] <snapshot> 1`] = `
{
  "actual": true,
  "expected": false,
  "message": "Assertion \\"{unknown} 'to be false'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- false\\u001b[39m\\n\\u001b[31m+ true\\u001b[39m",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be false'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- false\\u001b[39m\\n\\u001b[31m+ true\\u001b[39m\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:86:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be falsy'\" [unknown-to-be-falsy-2s1p] > should throw a consistent AssertionError [unknown-to-be-falsy-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be falsy'\\" failed:\\nInvalid input",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be falsy'\\" failed:\\nInvalid input\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:92:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be infinite'\" [unknown-to-be-infinite-2s1p] > should throw a consistent AssertionError [unknown-to-be-infinite-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be infinite'\\" failed:\\nInvalid input",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be infinite'\\" failed:\\nInvalid input\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:104:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be negative' / 'to be a negative number'\" [unknown-to-be-negative-to-be-a-negative-number-2s1p] > should throw a consistent AssertionError [unknown-to-be-negative-to-be-a-negative-number-2s1p] <snapshot> 1`] = `
{
  "actual": 5,
  "expected": 0,
  "message": "Assertion \\"{unknown} 'to be negative' / 'to be a negative number'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- 0\\u001b[39m\\n\\u001b[31m+ 5\\u001b[39m",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be negative' / 'to be a negative number'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- 0\\u001b[39m\\n\\u001b[31m+ 5\\u001b[39m\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:122:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be null'\" [unknown-to-be-null-2s1p] > should throw a consistent AssertionError [unknown-to-be-null-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be null'\\" failed:\\nInvalid input: expected null, received undefined",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be null'\\" failed:\\nInvalid input: expected null, received undefined\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:146:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be positive' / 'to be a positive number'\" [unknown-to-be-positive-to-be-a-positive-number-2s1p] > should throw a consistent AssertionError [unknown-to-be-positive-to-be-a-positive-number-2s1p] <snapshot> 1`] = `
{
  "actual": -5,
  "expected": 0,
  "message": "Assertion \\"{unknown} 'to be positive' / 'to be a positive number'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- 0\\u001b[39m\\n\\u001b[31m+ -5\\u001b[39m",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be positive' / 'to be a positive number'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- 0\\u001b[39m\\n\\u001b[31m+ -5\\u001b[39m\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:164:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be true'\" [unknown-to-be-true-2s1p] > should throw a consistent AssertionError [unknown-to-be-true-2s1p] <snapshot> 1`] = `
{
  "actual": false,
  "expected": true,
  "message": "Assertion \\"{unknown} 'to be true'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- true\\u001b[39m\\n\\u001b[31m+ false\\u001b[39m",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be true'\\" failed:\\n\\u001b[32m- Expected  - 1\\u001b[39m\\n\\u001b[31m+ Received  + 1\\u001b[39m\\n\\n\\u001b[32m- true\\u001b[39m\\n\\u001b[31m+ false\\u001b[39m\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:218:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be truthy' / 'to exist' / 'to be ok'\" [unknown-to-be-truthy-to-exist-to-be-ok-2s1p] > should throw a consistent AssertionError [unknown-to-be-truthy-to-exist-to-be-ok-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be truthy' / 'to exist' / 'to be ok'\\" failed:\\nInvalid input",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be truthy' / 'to exist' / 'to be ok'\\" failed:\\nInvalid input\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:224:7)"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be undefined'\" [unknown-to-be-undefined-2s1p] > should throw a consistent AssertionError [unknown-to-be-undefined-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be undefined'\\" failed:\\nInvalid input: expected undefined, received null",
  "name": "AssertionError",
  "stack": "AssertionError [ERR_ASSERTION]: Assertion \\"{unknown} 'to be undefined'\\" failed:\\nInvalid input: expected undefined, received null\\n    at <anonymous> (./test/error/sync-basic-error.test.ts:230:7)"
}
`;
